<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<FrameLayout 
    		android:id="@android:id/tabcontent"
    		android:layout_width="fill_parent"
    		android:layout_height="0.0dip"
    		android:layout_weight="1.0"
    		android:background="@drawable/bg03"/>
    	<TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>
    	<RadioGroup
    		android:id="@+id/main_tab"
    		android:background="@drawable/maintab_toolbar_bg"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">
    		<RadioButton
    			android:text="@string/weather"
    			android:drawableTop="@drawable/ic_icon_home"
    			android:id="@+id/radio_button0"
				android:paddingBottom="2dp"
    			style="@style/main_tab_bottom"/>
    		<RadioButton
    			android:text="@string/select"
    			android:drawableTop="@drawable/ic_icon_spot"
    			android:id="@+id/radio_button1"
				android:paddingBottom="2dp"
    			style="@style/main_tab_bottom"/>
    		<RadioButton
    			android:text="@string/map"
    			android:drawableTop="@drawable/ic_icon_map"
    			android:id="@+id/radio_button2"
				android:paddingBottom="2dp"
    			style="@style/main_tab_bottom"/>
    		<RadioButton
    			android:text="@string/tuijian"
    			android:drawableTop="@drawable/ic_icon_recommend"
    			android:id="@+id/radio_button3"
				android:paddingBottom="2dp"
    			style="@style/main_tab_bottom"/>
    		<RadioButton
    			android:text="@string/tool"
    			android:drawableTop="@drawable/ic_icon_more"
    			android:id="@+id/radio_button4"
				android:paddingBottom="2dp"
    			style="@style/main_tab_bottom"/>
    	</RadioGroup>
    </LinearLayout>
</TabHost>
