<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg01"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditActivity" >

    <LinearLayout 
        android:id="@+id/LinearLayout1"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diay_title" />

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content" />

        <EditText
            android:id="@+id/content"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="218dp" />
        
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:gravity="center"
        android:layout_width="wrap_content">
        <Button 
            android:id="@+id/submit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submit"/>

        <Button
            android:id="@+id/quit"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit" />

    </LinearLayout>

</RelativeLayout>