<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/content_today_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_weight="0.09"
        android:background="@drawable/content_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/xiaotieshi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="right"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/xiaotieshi"
            android:textAppearance="?android:attr/textAppearanceSmall"></TextView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">


            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/jinri"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"
                        android:text="@string/qiweng"></TextView>

                    <TextView
                        android:id="@+id/qiweng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"
                        android:text="@string/fengxiang"></TextView>

                    <TextView
                        android:id="@+id/shidu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"
                        android:text="@string/fengsu"></TextView>

                    <TextView
                        android:id="@+id/fengli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"
                        android:text="@string/tianqi"></TextView>

                    <TextView
                        android:id="@+id/kongqi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"
                        android:text="@string/zhiwai"></TextView>

                    <TextView
                        android:id="@+id/zhiwai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="2dip"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/a_0"></ImageView>

                <TextView
                    android:id="@+id/today_weather"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/content_small_bg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:background="@drawable/content_small"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tomorrow_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <ImageView
                android:id="@+id/tomorrow_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/a_0" >
            </ImageView>

            <TextView
                android:id="@+id/tomorrow_tianqi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/tomorrow_qiweng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_small_bg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="0.20"
            android:background="@drawable/content_small"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/afterday_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <ImageView
                android:id="@+id/afterday_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/a_0" >
            </ImageView>

            <TextView
                android:id="@+id/afterday_tianqi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/afterday_qiweng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>